# xHookUseDemo

./: settings.gradle
IOMonitorLib/: build.gradle
IOMonitorLib/src/androidTest/java/com/cck/io/monitor/: ExampleInstrumentedTest.java
IOMonitorLib/src/main/: AndroidManifest.xml
IOMonitorLib/src/main/cpp/: CMakeLists.txt  io_log.h  io_monitor.cpp  io_monitor.h  io_monitor_jni.cpp  utils.cpp  utils.h
IOMonitorLib/src/main/cpp/log/: x_log.cpp  x_log.h  x_log_buffer.cpp  x_log_buffer.h  x_log_buffer_header.cpp  x_log_buffer_header.h  x_log_constant.h  x_log_jni.cpp
IOMonitorLib/src/main/java/com/cck/io/monitor/: Config.java  IOEvent.java  IOMonitor.java  JavaContext.java  Logger.java  OnEventListener.java  XLog.java  XLogConfig.java
IOMonitorLib/src/test/java/com/cck/io/monitor/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/cck/monitor/io/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  be_hooked.cpp  be_hooked.h  hook_test.cpp  xhook_use_jni.cpp
app/src/main/java/com/cck/xhook/: App.java  HookTest.java  MainActivity.java  XHook.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cck/monitor/io/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
