cmake_minimum_required(VERSION 3.0.0)
project(xhook_use VERSION 0.1.0)
set(CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
include_directories(xhook)
find_library(log-lib log)
add_library(be_hooked SHARED be_hooked.cpp)
add_library(hook_test SHARED hook_test.cpp)
add_library(x_hook_use SHARED xhook_use_jni.cpp)
add_library(xhook SHARED IMPORTED)
set_target_properties(xhook PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/xhook/${ANDROID_ABI}/libxhook.so)
target_link_libraries(x_hook_use ${log-lib} xhook)
target_link_libraries(hook_test ${log-lib} be_hooked)

